@@ -3,7 +3,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*- 
  * ope-vsblf.c -- 
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2010 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -39,7 +39,6 @@ static const char* const rcsid = "$Id$";
 #include <Xm/SelectioB.h>
 #include <Xm/RowColumn.h>
 #include <Xm/ToggleB.h>
-
 #include <Xm/Separator.h>
 
 #include "constant.h"
