@@ -37,11 +37,10 @@ static const char* const rcsid = "$Id$";
 
 #include <X11/Intrinsic.h>
 #include <Xm/Xm.h>
-
-#include <math.h>
-
 #include <Xm/ScrollBar.h>
 #include <Xm/DrawingA.h>
+
+#include <math.h>
 
 #include "macro.h"
 #include "xoprs-main.h"
